# naipe

./: Cargo.toml
src/: lib.rs
src/common/: card.rs  deck.rs  hand.rs  mod.rs
src/games/: mod.rs  war.rs
