[package]
name = "naipe"
version = "0.1.0"
edition = "2021"
authors = ["Claire Moore <kurennon@gmail.com"]
description = "A Playing Card library with pre-implemented games"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
