[package]
name = "naipe"
version = "0.1.0"
edition = "2021"
authors = ["Claire Moore <kurennon@gmail.com"]
description = "A Playing Card library with pre-implemented games"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
thiserror = "1.0.38"

[features]
default = ["all_games"]
all_games = ["war"]
war = []

[[bin]]
name = "war"
required-features = ["war"]
